--- a/QuestManager.csproj
+++ b/QuestManager.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\QuestVisualiser.cs" />
     <Compile Include="Models\RotomecaQuest.cs" />
     <Compile Include="Models\Step.cs" />
+    <Compile Include="Models\StepVisualiser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StepForm.cs">
