build(form/step): Continue form

--- a/QuestManager.csproj
+++ b/QuestManager.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Manager.cs" />
     <Compile Include="Managers\QuestManager.cs" />
+    <Compile Include="Managers\StepManager.cs" />
     <Compile Include="MaxModifier.cs">
       <SubType>Form</SubType>
     </Compile>
